# workshop_dbt

./: README.md  docker-compose.yml  pyproject.toml
aula_01/: dbt_project.yml
